# nuum

./: Cargo.toml
crates/assets/: Cargo.toml
crates/builtins/egui/: Cargo.toml
crates/builtins/egui/src/: lib.rs
crates/builtins/renderer/: Cargo.toml
crates/builtins/renderer/src/: lib.rs  native.rs
crates/builtins/win_platform/: Cargo.toml
crates/builtins/win_platform/examples/: win_platform.rs
crates/builtins/win_platform/src/: builtins.rs  internals.rs  lib.rs
crates/core/src/: lib.rs
crates/core/src/data/: mod.rs  store.rs
crates/engine/assets/src/: lib.rs
crates/engine/core/: Cargo.toml
crates/engine/core/src/: event.rs  lib.rs  platform.rs
crates/engine/gpu/: Cargo.toml
crates/engine/gpu/src/: lib.rs  surface.rs
crates/engine/render_graph/: Cargo.toml
crates/engine/render_graph/src/: lib.rs  pass.rs  res.rs
crates/engine/render_graph/src/builtins/: mod.rs
crates/gpu/: Cargo.toml
crates/gpu/src/: lib.rs  surface.rs
crates/render_graph/: Cargo.toml
crates/render_graph/src/: lib.rs  pass.rs  res.rs
crates/render_graph/src/builtins/: mod.rs
crates/win_platform/: Cargo.toml
crates/win_platform/src/: internals.rs  lib.rs
examples/: architecture.rs  main.rs
src/: lib.rs
