[package]
name = "nuum"
version = "0.1.0"
edition = "2021"

[dependencies]
nuum_core = { path = "crates/engine/core" }

nuum_win_platform = { path = "crates/builtins/win_platform", optional = true }

nuum_gpu = { path = "crates/engine/gpu", optional = true }
nuum_render_graph = { path = "crates/engine/render_graph", optional = true }

##TODO: Add features
nuum_event_loop = { path = "crates/builtins/event_loop" }
nuum_renderer = { path = "crates/builtins/renderer" }
nuum_egui = { path = "crates/builtins/egui" }

[features]
win_platform = ["nuum_win_platform"]

gpu = ["nuum_gpu"]
renderer = ["nuum_render_graph"]

default = ["win_platform", "gpu", "renderer"]

[workspace]
resolver = "2"
members = [
  "crates/engine/*",
  "crates/builtins/*"
]
